# ghest

./: CMakeLists.txt  README.md  ble_advertising.py  ble_simple_peripheral.py  build.txt  defaults.json  ghest.c  ghest.ino  local.properties  main-for-demo-day.py  main.c  main.py  main_proto.py  package-lock.json  package.json  settings.gradle.kts
Ghest App/: Commits September 2024  Test File.txt
app/: build.gradle.kts
app/src/androidTest/java/com/ghest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ghest/: MainActivity.kt  MyAmplifyApp.kt
app/src/main/java/com/ghest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/ghest/: ExampleUnitTest.kt
arduino/: ghest-gesture-recognition.imo  ghest-gesture-recognition.ino  ghest.ino  ghest_alpha.ino  ghest_ble.ino  ghest_v2.ino  sprint3_demo.ino  test_party_demo.ino
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
micropython/: README.txt  ble_advertising.py  ble_simple_peripheral.py  main-for-demo-day.py  main.py  main_proto.py  mpu6050.py
